# bentoo

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_binaries.yml  ci.yml  reference_run.yml  release.yml
docs/: SUMMARY.md
docs/benchmark/: runs_description.md  structure.md
docs/bentoo-sarif/: format.md
docs/general/: getting_started.md  glossary.md
docs/tool/: runner_script.md  tools_description.md
playground/: reference_run.sh  reference_run_macos.sh
playground/reference_truths/: truth_3.0.14_CVE-2017-1000487.sarif  truth_3.0.16_CVE-2017-1000487.sarif
src/: lib.rs
src/command/: bench.rs  compare.rs  convert.rs  evaluate.rs  mod.rs  parse.rs  run.rs  summarize.rs  template.rs
src/convert/: common.rs  mod.rs
src/convert/tool/: bandit.rs  bearer.rs  codeql.rs  contrast_scan.rs  coverity.rs  cppcheck.rs  gosec.rs  insider.rs  mod.rs  semgrep.rs  snyk.rs  sonarqube.rs
src/reference/: mod.rs  taxonomy.rs  truth.rs
src/reference/run/: config.rs
src/run/: directory.rs  metadata.rs  mod.rs  report_config.rs
src/run/description/: mod.rs  runs.rs  tools.rs
src/util/: mod.rs
taxonomies/: CWE_v4.14.sarif  gosec_rule_mapping.json  sonarqube_rule_mapping.json
tool_runners/: bandit.sh  bearer.sh  codeql-nodocker.sh  codeql.sh  contrast_scan.sh  cppcheck.sh  gosec.sh  insider.sh  proprietary_tools.toml  semgrep.sh  snyk.sh  sonarqube.sh  tools.toml  tools_cpp.toml  tools_csharp.toml  tools_go.toml  tools_java.toml  tools_java_macos.toml  tools_python.toml
