[package]
name = "bentoo"
version = "0.0.4"
edition = "2021"

[lib]
name = "bentoo"
path = "src/lib.rs"

[[bin]]
name = "bentoo"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-sarif = "0.4.2"
csv = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
walkdir = "2"
tempfile = "3"
itertools = "0.12.1"
thiserror = "1.0.60"
home = "0.5.9"
duration-str = "0.17.0"
